syntax = "proto3";

package role.v1;

import "google/api/annotations.proto";
import "google/protobuf/empty.proto";
import "protoc-gen-openapiv2/options/annotations.proto";
import "role/v1/create_request.proto";
import "role/v1/create_response.proto";
import "role/v1/get_by_id_request.proto";
import "role/v1/get_by_id_response.proto";
import "role/v1/update_request.proto";
import "role/v1/update_response.proto";
import "role/v1/delete_request.proto";
import "role/v1/get_all_request.proto";
import "role/v1/get_all_response.proto";

option go_package = "github.com/eliofery/golang-grpc/pkg/api/role/v1";
option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_swagger) = {
  info: {
    title: "Role API"
    version: "1.0"
    description: "Interaction with roles via API"
    contact: {
      name: "Sergio Eliofery"
      url: "https://github.com/eliofery/golang-grpc"
      //      email: "mail@example.site" todo add email
    }
    //    license: {
    //      name: "MIT"
    //      url: "https://github.com/eliofery/golang-grpc/blob/main/LICENSE"
    //    }
  }
  host: "localhost:8080"
  schemes: [
    HTTP,
    HTTPS
  ]
  consumes: ["application/json"]
  produces: ["application/json"]
  security_definitions: {
    security: {
      key: "bearer"
      value: {
        type: TYPE_API_KEY
        in: IN_HEADER
        name: "Authorization"
        description: "Authentication token, prefixed by Bearer: Bearer <token>"
      }
    }
  }
  security: {
    security_requirement: {key: "bearer"}
  }
  responses: {
    key: "400",
    value: {
      description: "Invalid input";
      schema: {example: '{"code":3,"message":"validation error","details":[]}'}
    }
  }
  responses: {
    key: "500",
    value: {
      description: "Internal server error";
      schema: {example: '{"code":13,"message":"internal server error","details":[]}'}
    }
  }
};

service RoleV1Service {
  // Create new role
  rpc Create(CreateRequest) returns (CreateResponse) {
    option (google.api.http) = {
      post: "/v1/roles/create"
      body: "*"
    };

    option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_operation) = {
      summary: "Create new role"
      tags: "Create"
      responses: {
        key: "200"
        value: {
          description: "Create new role"
          schema: {
            json_schema: {ref: "#/definitions/v1CreateResponse"}
          }
        }
      }
      responses: {
        key: "409"
        value: {
          description: "Role already exists"
          schema: {
            example: '{"code":6,"message":"role already exists","details":[]}'
          }
        }
      }
    };
  }

  // Get role
  rpc GetByID(GetByIDRequest) returns (GetByIDResponse) {
    option (google.api.http) = {
      get: "/v1/roles/{id}"
    };

    option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_operation) = {
      summary: "Get role data"
      tags: "Get"
      responses: {
        key: "200"
        value: {
          description: "Get role data"
          schema: {
            json_schema: {ref: "#/definitions/v1GetByIDResponse"}
          }
        }
      }
      responses: {
        key: "403"
        value: {
          description: "Access denied"
          schema: {
            example: '{"code":7,"message":"you are not authenticated","details":[]}'
          }
        }
      }
      responses: {
        key: "404"
        value: {
          description: "Role not found"
          schema: {
            example: '{"code":7,"message":"role not found","details":[]}'
          }
        }
      }
    };
  }

  // Update role
  rpc Update(UpdateRequest) returns (UpdateResponse) {
    option (google.api.http) = {
      put: "/v1/roles/update/{id}"
      body: "*"
    };

    option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_operation) = {
      summary: "Update role data"
      tags: "Update"
      responses: {
        key: "200"
        value: {
          description: "Update role data"
          schema: {
            json_schema: {ref: "#/definitions/v1UpdateResponse"}
          }
        }
      }
      responses: {
        key: "403"
        value: {
          description: "Access denied"
          schema: {
            example: '{"code":7,"message":"you are not authenticated","details":[]}'
          }
        }
      }
      responses: {
        key: "404"
        value: {
          description: "Role not found"
          schema: {
            example: '{"code":7,"message":"role not found","details":[]}'
          }
        }
      }
    };
  }

  // Delete role
  rpc Delete(DeleteRequest) returns (google.protobuf.Empty) {
    option (google.api.http) = {
      delete: "/v1/roles/delete/{id}"
    };

    option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_operation) = {
      summary: "Delete role data"
      tags: "Delete"
      responses: {
        key: "200"
        value: {
          description: "Delete role data"
        }
      }
      responses: {
        key: "403"
        value: {
          description: "Access denied"
          schema: {
            example: '{"code":7,"message":"you are not authenticated","details":[]}'
          }
        }
      }
      responses: {
        key: "404"
        value: {
          description: "Role not found"
          schema: {
            example: '{"code":7,"message":"role not found","details":[]}'
          }
        }
      }
    };
  }

  // Get all roles
  rpc GetAll(GetAllRequest) returns (GetAllResponse) {
    option (google.api.http) = {
      get: "/v1/roles"
    };

    option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_operation) = {
      summary: "Get all roles data"
      tags: "Get"
      responses: {
        key: "200"
        value: {
          description: "Get all roles data"
          schema: {
            json_schema: {ref: "#/definitions/v1GetAllResponse"}
          }
        }
      }
      responses: {
        key: "403"
        value: {
          description: "Access denied"
          schema: {
            example: '{"code":7,"message":"you are not authenticated","details":[]}'
          }
        }
      }
      responses: {
        key: "404"
        value: {
          description: "Roles not found"
          schema: {
            example: '{"code":7,"message":"roles not found","details":[]}'
          }
        }
      }
    };
  }
}
